I think this data is clean?

--- a/predicting_crime.ipynb
+++ b/predicting_crime.ipynb
@@ -2,12 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "%matplotlib inline\n",
-    "import os\n",
     "import matplotlib.pyplot as plt\n",
     "import geopandas as gpd\n",
     "import shapely.wkt\n",
@@ -18,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -310,7 +309,7 @@
        "[5 rows x 25 columns]"
       ]
      },
-     "execution_count": 158,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -322,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -332,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -544,7 +543,7 @@
        "[5 rows x 31 columns]"
       ]
      },
-     "execution_count": 166,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -563,7 +562,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -576,7 +575,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 194,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -593,7 +592,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 194,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -604,7 +603,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 198,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -615,7 +614,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 206,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -744,7 +743,7 @@
        "4              0  0.412791  "
       ]
      },
-     "execution_count": 206,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -759,10 +758,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 205,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "grouped.to_csv('data_for_sagemaker.csv')"
+   ]
   },
   {
    "cell_type": "code",
