Adding Forecasting Primer

--- a/Starter-Code/Downloading data from Kaggle.ipynb
+++ b/Starter-Code/Downloading data from Kaggle.ipynb
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -77,7 +77,16 @@
       "100%|███████████████████████████████████████▊| 357M/358M [00:06<00:00, 62.4MB/s]\n",
       "100%|████████████████████████████████████████| 358M/358M [00:06<00:00, 61.0MB/s]\n",
       "Downloading gefs_train.zip to /home/ec2-user/SageMaker/amazon-sagemaker-architecting-for-ml/Starter-Code\n",
-      " 92%|███████████████████████████████████▋   | 999M/1.07G [00:14<00:01, 79.3MB/s]"
+      "100%|█████████████████████████████████████▉| 1.07G/1.07G [00:16<00:00, 78.4MB/s]\n",
+      "100%|██████████████████████████████████████| 1.07G/1.07G [00:16<00:00, 71.0MB/s]\n",
+      "Downloading gefs_test.zip to /home/ec2-user/SageMaker/amazon-sagemaker-architecting-for-ml/Starter-Code\n",
+      " 99%|███████████████████████████████████████▋| 355M/358M [00:06<00:00, 39.1MB/s]\n",
+      "100%|████████████████████████████████████████| 358M/358M [00:06<00:00, 57.8MB/s]\n",
+      "station_info.csv: Skipping, found more recently modified local copy (use --force to force download)\n",
+      "sampleSubmission.csv: Skipping, found more recently modified local copy (use --force to force download)\n",
+      "Downloading gefs_elevations.nc to /home/ec2-user/SageMaker/amazon-sagemaker-architecting-for-ml/Starter-Code\n",
+      "  0%|                                               | 0.00/8.87k [00:00<?, ?B/s]\n",
+      "100%|██████████████████████████████████████| 8.87k/8.87k [00:00<00:00, 10.1MB/s]\n"
      ]
     }
    ],
