Adding latest version of multithreaded ensembling

--- a/Starter-Code/Multithreaded_ensembling.ipynb
+++ b/Starter-Code/Multithreaded_ensembling.ipynb
@@ -1,8 +1,18 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Multithreaded Ensembling\n",
+    "Two things are important here. Your time, and your results. Let's see if we can optimize for both! Use this notebook when you already have train, test, and validation data. Then you can train & tune a large number of models, and pull the results back in using an ensembling approach that takes the maximum prediction out of each classifier.\n",
+    "\n",
+    "Finally, you'll use SageMaker Search to find the best performing models from your bucket, and run multi-threaded batch transform jobs to run inference on all of your newly trained models."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,18 +36,26 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "train = pd.read_csv('../Data/train.csv', names = list(range(89)))\n",
-    "test = pd.read_csv('../Data/test.csv', names = list(range(89)))"
+    "### 1. Upload your train and test data sets\n",
+    "Make sure you have the label in the first column."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train = pd.read_csv('train.csv', names = list(range(89)))\n",
+    "test = pd.read_csv('test.csv', names = list(range(89)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,8 +66,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2. Define functions"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,56 +145,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# add k-fold cross validation here \n",
-    "sess = sagemaker.Session()\n",
-    "role = get_execution_role()\n",
-    "client = boto3.client('sagemaker')\n",
-    "bucket = sess.default_bucket()\n",
-    "\n",
-    "s3_input_train = sagemaker.s3_input(s3_data='s3://{}/train'.format(bucket), content_type='csv')\n",
-    "s3_input_test = sagemaker.s3_input(s3_data='s3://{}/test/'.format(bucket), content_type='csv')"
+    "def copy_to_s3():\n",
+    "    os.system('!aws s3 cp train.csv s3://ensemble-modeling/csv/train/train.csv')\n",
+    "    os.system('!aws s3 cp test.csv s3://ensemble-modeling/csv/test/test.csv')\n",
+    "    os.system('!aws s3 cp test.csv s3://ensemble-modeling/csv/validation/validation.csv')\n",
+    "        \n",
+    "copy_to_s3()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import sagemaker\n",
-    "from sagemaker.amazon.amazon_estimator import RecordSet\n",
-    "import boto3\n",
-    "\n",
-    "# instantiate the LinearLearner estimator object\n",
-    "multiclass_estimator = sagemaker.LinearLearner(role=sagemaker.get_execution_role(),\n",
-    "                                               train_instance_count=1,\n",
-    "                                               train_instance_type='ml.m4.xlarge',\n",
-    "                                               predictor_type='binary_classifier',\n",
-    "                                               num_classes=2)\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# wrap data in RecordSet objects\n",
-    "train_records = multiclass_estimator.record_set(train_features, train_labels, channel='train')\n",
-    "test_records = multiclass_estimator.record_set(test_features, test_labels, channel='test')\n",
-    "\n",
-    "# start a training job\n",
-    "multiclass_estimator.fit([train_records, test_records])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -212,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -222,12 +212,12 @@
     "    est = get_estimator(clf, sess, role)\n",
     "\n",
     "    # get the hyperparameter tuner config \n",
-    "    # set this to look for recall somehow \n",
     "    if clf == 'xgboost':\n",
     "        \n",
     "        tuner = get_tuner(clf, est)\n",
     "        \n",
-    "        tuner.fit({'train': s3_input_train, 'test': s3_input_test}) \n",
+    "        \n",
+    "        tuner.fit({'train': s3_input_train, 'validation': s3_input_validation}) \n",
     "\n",
     "    else:\n",
     "        # set the records\n",
@@ -237,12 +227,14 @@
     "        tuner = get_tuner(clf, est)\n",
     "        \n",
     "        tuner.fit([train_records, test_records])\n",
-    "    "
+    "    \n",
+    "    \n",
+    "run_training_job('linear-learner')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -255,12 +247,221 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
-    "clfs = ['xgboost', 'linear-learner', 'factorization-machines', 'knn']\n",
+    "sess = sagemaker.Session()\n",
+    "role = get_execution_role()\n",
+    "client = boto3.client('sagemaker')\n",
+    "bucket = 'ensemble-modeling'\n",
+    "\n",
+    "s3_input_train = sagemaker.s3_input(s3_data='s3://{}/train'.format(bucket), content_type='csv')\n",
+    "s3_input_test = sagemaker.s3_input(s3_data='s3://{}/test/'.format(bucket), content_type='csv')\n",
+    "\n",
+    "# XGboost only likes a validation channel for hyperparameter tuning, not a test channel. So we'll set that up\n",
+    "s3_input_validation = sagemaker.s3_input(s3_data='s3://{}/validation/'.format(bucket), content_type='csv')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 3. Define the models you want to use"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# clfs = ['xgboost', 'linear-learner', 'factorization-machines', 'knn']\n",
+    "\n",
+    "clfs = [ 'xgboost']\n",
+    "\n",
     "magic_loop(clfs)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 4. Select the best models\n",
+    "Now, we're going to use SageMaker search to find the best performing models from the hyperparameter tuning jobs we just ran."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import boto3\n",
+    "smclient = boto3.client(service_name='sagemaker')\n",
+    "\n",
+    "# Search the training job by Amazon S3 location of model artifacts\n",
+    "search_params={\n",
+    "   \"MaxResults\": 100,\n",
+    "   \"Resource\": \"TrainingJob\",\n",
+    "   \"SearchExpression\": { \n",
+    "      \"Filters\": [ \n",
+    "         { \n",
+    "            \"Name\": \"InputDataConfig.DataSource.S3DataSource.S3Uri\",\n",
+    "            \"Operator\": \"Contains\",\n",
+    "             \n",
+    "             # set this to have a word that is in your bucket name\n",
+    "            \"Value\": 'ensemble'\n",
+    "         },\n",
+    "        { \n",
+    "            \"Name\": \"TrainingJobStatus\",\n",
+    "            \"Operator\": \"Equals\",\n",
+    "            \"Value\": 'Completed'\n",
+    "         }, \n",
+    "    ],\n",
+    "     \n",
+    "   },\n",
+    "    \n",
+    "    \"SortBy\": \"Metrics.validation:auc\",\n",
+    "      \"SortOrder\": \"Descending\"\n",
+    "}\n",
+    "results = smclient.search(**search_params)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sagemaker.model import Model\n",
+    "\n",
+    "def get_models(results):\n",
+    "\n",
+    "    role = sagemaker.get_execution_role()\n",
+    "\n",
+    "    models = []\n",
+    "\n",
+    "    for each in results['Results']:\n",
+    "\n",
+    "        job_name = each['TrainingJob']['TrainingJobName']\n",
+    "\n",
+    "\n",
+    "        artifact = each['TrainingJob']['ModelArtifacts']['S3ModelArtifacts']\n",
+    "\n",
+    "        # get training image\n",
+    "        image =  each['TrainingJob']['AlgorithmSpecification']['TrainingImage']\n",
+    "\n",
+    "        m = Model(artifact, image, role = role, sagemaker_session = sess, name = job_name)\n",
+    "\n",
+    "        models.append(m)\n",
+    "        \n",
+    "    return models[:15]\n",
+    "\n",
+    "models = get_models(results)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 5. Ensemble Batch Transform\n",
+    "Now, we're going to run a separate batch transform job for each model. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "upload: ./actual_test.csv to s3://ensemble-modeling/batch_test/test.csv\n"
+     ]
+    }
+   ],
+   "source": [
+    "!aws s3 cp actual_test.csv s3://ensemble-modeling/batch_test/test.csv"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Using already existing model: xgboost-190730-1958-024-b8a2fd71\n"
+     ]
+    }
+   ],
+   "source": [
+    "def run_batch_transform(model):\n",
+    "\n",
+    "    transformer = model.transformer(\n",
+    "        instance_count=1,\n",
+    "        instance_type='ml.m4.xlarge',\n",
+    "        output_path='s3://ensemble-modeling/batch_results'\n",
+    "    )\n",
+    "\n",
+    "    transformer.transform(data='s3://ensemble-modeling/batch_test/test.csv', content_type='text/csv')\n",
+    "\n",
+    "    \n",
+    "run_batch_transform(models[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# pool = Pool(processes=multiprocessing.cpu_count())\n",
+    "# transformed_rows = pool.map(run_batch_transform, models)\n",
+    "# pool.close() \n",
+    "# pool.join()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 6. Consolidate batch results\n",
+    "Finally, we'll pull together all of the batch job inferences. For each one, we'll take the maximum confidence level and consider that a positive prediction. Then we'll see how well that performs, relative to using a single XGBoost model. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 7. Generate Confusion Matrix\n",
+    "At the end, let's chart a plot for the performance of each of these models. Did the ensembling help? Which model appears to be the best?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 8. Analyze poor performance\n",
+    "Which data observations are not working as well? Now, let's pull in the actual records that we're not able to correctly predict so far, and understand the key trends. Is there a feature you can extract from these, that you can incorporate into your model? "
    ]
   },
   {
