Adding next version of multithreading

--- a/Starter-Code/Multithreaded_ensembling.ipynb
+++ b/Starter-Code/Multithreaded_ensembling.ipynb
@@ -371,24 +371,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 82,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_data = pd.read_csv('../Data/test.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_df = test_data.drop('0', axis=1)\n",
+    "\n",
+    "test_df.to_csv('test_data.csv', index=False, header=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "upload: ./actual_test.csv to s3://ensemble-modeling/batch_test/test.csv\n"
+      "upload: ./test_data.csv to s3://ensemble-modeling/batch_test/test.csv\n"
      ]
     }
    ],
    "source": [
-    "!aws s3 cp actual_test.csv s3://ensemble-modeling/batch_test/test.csv"
+    "!aws s3 cp test_data.csv s3://ensemble-modeling/batch_test/test.csv"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
@@ -405,18 +425,19 @@
     "    transformer = model.transformer(\n",
     "        instance_count=1,\n",
     "        instance_type='ml.m4.xlarge',\n",
-    "        output_path='s3://ensemble-modeling/batch_results'\n",
+    "        output_path='s3://ensemble-modeling/batch_results/{}'.format(model.name)\n",
     "    )\n",
     "\n",
     "    transformer.transform(data='s3://ensemble-modeling/batch_test/test.csv', content_type='text/csv')\n",
     "\n",
     "    \n",
-    "run_batch_transform(models[0])"
+    "for model in models:\n",
+    "    run_batch_transform(model)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [],
    "source": [
