Adding amazing results from ensembling

--- a/Starter-Code/Multithreaded_ensembling.ipynb
+++ b/Starter-Code/Multithreaded_ensembling.ipynb
@@ -799,14 +799,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 184,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Precision = 0.0%, Recall = 100.0%\n"
+      "Precision = 19.46%, Recall = 70.15%\n"
      ]
     },
     {
@@ -861,7 +861,7 @@
        "1             389   94"
       ]
      },
-     "execution_count": 182,
+     "execution_count": 184,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -880,9 +880,9 @@
     "    # lower left corner\n",
     "    fns = mx.iloc[1, 0]\n",
     "    \n",
-    "    precision = np.round(tps / (tps + fns), 2) * 100\n",
+    "    precision = np.round(tps / (tps + fns), 4) * 100\n",
     "    \n",
-    "    recall = np.round(tps / (tps + fps), ) * 100\n",
+    "    recall = np.round(tps / (tps + fps), 4) * 100\n",
     "    \n",
     "    print ('Precision = {}%, Recall = {}%'.format(precision, recall))\n",
     "    \n",
@@ -892,95 +892,24 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 178,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th>predictions</th>\n",
-       "      <th>0.0</th>\n",
-       "      <th>1.0</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>actuals</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>3595</td>\n",
-       "      <td>40</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>389</td>\n",
-       "      <td>94</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "predictions   0.0  1.0\n",
-       "actuals               \n",
-       "0            3595   40\n",
-       "1             389   94"
-      ]
-     },
-     "execution_count": 178,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "mx"
+    "### Results With Ensembling"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 185,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "One XGBoost model got us a precision of 0.7014925373134329 and recall of 0.19461697722567287\n"
+      "Precision = 100.0%, Recall = 100.0%\n"
      ]
-    }
-   ],
-   "source": [
-    "recall = 94 / (94 + 389)\n",
-    "precision = 94 / (94 + 40)\n",
-    "print ('One XGBoost model got us a precision of {} and recall of {}'.format(precision, recall))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 159,
-   "metadata": {},
-   "outputs": [
+    },
     {
      "data": {
       "text/html": [
@@ -1033,13 +962,20 @@
        "1               0  483"
       ]
      },
-     "execution_count": 159,
+     "execution_count": 185,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "pd.crosstab(index=df['y_true'], columns=np.round(df['max']), rownames=['actuals'], colnames=['predictions'])"
+    "get_confusion_matrix(df, 'max')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Amazing! In this small example, we were able to see remarkable performance, simply by dramatically increasing the number of models we used to make inference."
    ]
   },
   {
