Adding marketplace project

--- a/Starter-Code/pandas/pandas-snippets.ipynb
+++ b/Starter-Code/pandas/pandas-snippets.ipynb
@@ -7,7 +7,9 @@
     "Courtesy of:\n",
     "- https://gist.github.com/bsweger/e5817488d161f37dcbd2\n",
     "- https://jeffdelaney.me/blog/useful-snippets-in-pandas/\n",
-    "- and my own experience"
+    "- and my own experience\n",
+    "\n",
+    "Datasets created by AWS."
    ]
   },
   {
@@ -39,16 +41,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "USER_ID,AGE,GENDER,LOCATION,SALARY,FAV_CLUSTER,FAV_MODEL,FAV\r\n",
-      "3,35,FEMALE,60647,35283,22,11,NEWISH-GMC-Acadia\r\n",
-      "13,39,FEMALE,92335,35008,51,25,OLDISH-BMW-430i\r\n",
-      "15,38,FEMALE,77449,59198,56,28,NEWISH-Buick-Regal\r\n",
-      "20,40,MALE,77494,86488,73,36,OLDISH-Ford-Fusion\r\n",
-      "24,42,FEMALE,90805,32565,53,26,OLDISH-Ford-Explorer\r\n",
-      "29,37,MALE,10458,22072,50,25,NEWISH-BMW-430i\r\n",
-      "32,44,FEMALE,85364,31515,11,5,OLDISH-Nissan-Altima\r\n",
-      "36,36,MALE,92154,42970,33,16,OLDISH-Ford-Escape\r\n",
-      "39,40,MALE,60618,41355,72,36,NEWISH-Ford-Fusion\r\n"
+      "USER_ID,AGE,GENDER,LOCATION,SALARY,FAV_CLUSTER,FAV_MODEL,FAV\n",
+      "3,35,FEMALE,60647,35283,22,11,NEWISH-GMC-Acadia\n",
+      "13,39,FEMALE,92335,35008,51,25,OLDISH-BMW-430i\n",
+      "15,38,FEMALE,77449,59198,56,28,NEWISH-Buick-Regal\n",
+      "20,40,MALE,77494,86488,73,36,OLDISH-Ford-Fusion\n",
+      "24,42,FEMALE,90805,32565,53,26,OLDISH-Ford-Explorer\n",
+      "29,37,MALE,10458,22072,50,25,NEWISH-BMW-430i\n",
+      "32,44,FEMALE,85364,31515,11,5,OLDISH-Nissan-Altima\n",
+      "36,36,MALE,92154,42970,33,16,OLDISH-Ford-Escape\n",
+      "39,40,MALE,60618,41355,72,36,NEWISH-Ford-Fusion\n"
      ]
     }
    ],
@@ -65,16 +67,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ZIP_CODE,CITY,INCOME\r\n",
-      "79936,El Paso TX,42857\r\n",
-      "90011,Los Angeles CA,23851\r\n",
-      "60629,Chicago IL,40279\r\n",
-      "90650,Norwalk CA,46012\r\n",
-      "90201,Bell Gardens CA,30029\r\n",
-      "77084,Houston TX,53075\r\n",
-      "92335,Fontana CA,35008\r\n",
-      "78521,Brownsville TX,23426\r\n",
-      "77449,Katy TX,59198\r\n"
+      "ZIP_CODE,CITY,INCOME\n",
+      "79936,El Paso TX,42857\n",
+      "90011,Los Angeles CA,23851\n",
+      "60629,Chicago IL,40279\n",
+      "90650,Norwalk CA,46012\n",
+      "90201,Bell Gardens CA,30029\n",
+      "77084,Houston TX,53075\n",
+      "92335,Fontana CA,35008\n",
+      "78521,Brownsville TX,23426\n",
+      "77449,Katy TX,59198\n"
      ]
     }
    ],
@@ -1549,16 +1551,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "79936,El Paso TX,42857\r\n",
-      "90011,Los Angeles CA,23851\r\n",
-      "60629,Chicago IL,40279\r\n",
-      "90650,Norwalk CA,46012\r\n",
-      "90201,Bell Gardens CA,30029\r\n",
-      "77084,Houston TX,53075\r\n",
-      "92335,Fontana CA,35008\r\n",
-      "78521,Brownsville TX,23426\r\n",
-      "77449,Katy TX,59198\r\n",
-      "78572,Mission TX,23799\r\n"
+      "79936,El Paso TX,42857\n",
+      "90011,Los Angeles CA,23851\n",
+      "60629,Chicago IL,40279\n",
+      "90650,Norwalk CA,46012\n",
+      "90201,Bell Gardens CA,30029\n",
+      "77084,Houston TX,53075\n",
+      "92335,Fontana CA,35008\n",
+      "78521,Brownsville TX,23426\n",
+      "77449,Katy TX,59198\n",
+      "78572,Mission TX,23799\n"
      ]
     }
    ],
@@ -1576,16 +1578,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "LOCATION,CITY,INCOME\r\n",
-      "79936,El Paso TX,42857\r\n",
-      "90011,Los Angeles CA,23851\r\n",
-      "60629,Chicago IL,40279\r\n",
-      "90650,Norwalk CA,46012\r\n",
-      "90201,Bell Gardens CA,30029\r\n",
-      "77084,Houston TX,53075\r\n",
-      "92335,Fontana CA,35008\r\n",
-      "78521,Brownsville TX,23426\r\n",
-      "77449,Katy TX,59198\r\n"
+      "LOCATION,CITY,INCOME\n",
+      "79936,El Paso TX,42857\n",
+      "90011,Los Angeles CA,23851\n",
+      "60629,Chicago IL,40279\n",
+      "90650,Norwalk CA,46012\n",
+      "90201,Bell Gardens CA,30029\n",
+      "77084,Houston TX,53075\n",
+      "92335,Fontana CA,35008\n",
+      "78521,Brownsville TX,23426\n",
+      "77449,Katy TX,59198\n"
      ]
     }
    ],
@@ -9281,10 +9283,11 @@
   }
  ],
  "metadata": {
+  "instance_type": "ml.t3.medium",
   "kernelspec": {
-   "display_name": "conda_pytorch_p36",
+   "display_name": "Python 3 (Data Science)",
    "language": "python",
-   "name": "conda_pytorch_p36"
+   "name": "python3__SAGEMAKER_INTERNAL__arn:aws:sagemaker:us-east-1:081325390199:image/datascience-1.0"
   },
   "language_info": {
    "codemirror_mode": {
@@ -9296,9 +9299,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
