updating range for k

--- a/Starter-Code/Apply clustering techniques.ipynb
+++ b/Starter-Code/Apply clustering techniques.ipynb
@@ -519,7 +519,7 @@
    "source": [
     "#### Experiment Summary\n",
     "\n",
-    "<font color='red'>Task: Next, we recommend that each member in the group to replicate the working notebook and perform one or more experiments for different values of K (Step 2: Train an ML model onwards) and report `Sum Square Distance` in following section.\n",
+    "<font color='red'>Task: Next, we recommend that each member in the group to replicate the working notebook and perform one or more experiments for different values of K from k=2 to k=20, (Step 2: Train an ML model onwards) and report `Sum Square Distance` in following section.\n",
     "    \n",
     "For this experiment, do not use Automatic model tuning. The goal of this exercise is to ensure that every team member understands the experimentation process for the problem at hand so that your team can solve task 2 more efficiently.\n",
     "\n",
