adding a note about the get_role warning + changing default instance type

--- a/Starter-Code/Apply clustering techniques.ipynb
+++ b/Starter-Code/Apply clustering techniques.ipynb
@@ -117,6 +117,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Dont worry about the following warning. Note that cell has executed successfully.\n",
+    "\n",
+    "`Couldn't call 'get_role' to get Role ARN from role name Sagemaker_Studio_Role to get Role path.`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Task 1:\n",
     "In this project, you will find stocks that have identical shape. This task has been divided into following three steps:\n",
     "\n",
@@ -337,9 +346,9 @@
     "\n",
     "1. Open the algorithm [AWS Marketplace listing page](https://aws.amazon.com/marketplace/pp/Spotad-LTD-K-Shape-Time-Series-Clustering/prodview-bjbovimwn5ajs)\n",
     "1. Click on **Continue to subscribe** button.\n",
-    "1. On the Subscribe to this software page, review and click on **\"Accept Offer\"** if you agree with EULA, pricing, and support terms. If **Continue to configuration** button is active, it means account already has a subscription to the algorithm.\n",
-    "1.  click on **Continue to configuration** button and then choose a **region** corresponding to the AWS Region in which you launched notebook,\n",
-    "1. you will see a **Product Arn**. Copy the ARN and specify the same in the following cell.\n"
+    "1. If you are trying this notebook as part of a workshop conducted by AWS, a subscription has been created for you and **Continue to configuration** button is active. However, If your trying this notebook in your own AWS account, On the ***Subscribe to this software*** page, **\"Accept Offer\"** button needs to be clicked if you agree with EULA, pricing, and support terms.\n",
+    "1. Click on **Continue to configuration** button and then choose a **region** corresponding to the AWS Region in which you launched notebook,\n",
+    "1. you will see a **Product Arn**. Copy the ARN and specify the same in the following cell."
    ]
   },
   {
@@ -370,7 +379,7 @@
     "                          base_job_name=common_prefix,\n",
     "                          hyperparameters={\"k\": \"11\", \"label_size\": \"1\"}) \n",
     "\n",
-    "#algo.fit({'train': train_file}) \n"
+    "algo.fit({'train': train_file}) \n"
    ]
   },
   {
@@ -688,7 +697,7 @@
   }
  ],
  "metadata": {
-  "instance_type": "ml.t3.medium",
+  "instance_type": "ml.c5.large",
   "kernelspec": {
    "display_name": "Python 3 (Data Science)",
    "language": "python",
