--- a/Starter-Code/Architecting-for-ML-GAN.ipynb
+++ b/Starter-Code/Architecting-for-ML-GAN.ipynb
@@ -32,7 +32,11 @@
    "metadata": {},
    "source": [
     "## Dependencies\n",
-    "First, let's import all of the python packages we will use throughout the tutorial.\n"
+    "\n",
+    "1. First, to run this notebook, please clone the repo - https://github.com/aws-samples/aws-deepcomposer-samples in your Amazon SageMaker notebook instance, after creating notebook instance and then selecting Open Jupyter\n",
+    "1. Next copy this notebook to aws-deepcomposer-samples/Lab 202\n",
+    "1. Then, please change the kernel for this notebook to conda_tensorflow_p36 by selecting Kernel --> Change Kernel above.\n",
+    "1. Finally we import all of the python packages we will use throughout this notebook. \n"
    ]
   },
   {
@@ -58,10 +62,52 @@
     "\n",
     "\n",
     "# Create the environment\n",
-    "import subprocess\n",
-    "print(\"Please wait, while the required packages are being installed...\")\n",
-    "subprocess.call(['./requirements.sh'])\n",
-    "print(\"All the required packages are installed successfully...\")"
+    "!pip install numpy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!pip install pretty_midi"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!pip install pypianoroll"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!pip install music21"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!pip install seaborn"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!pip install --ignore-installed moviepy"
    ]
   },
   {
@@ -146,6 +192,7 @@
    "metadata": {},
    "source": [
     "## Data Preparation\n",
+    " \n",
     "\n",
     "### Dataset summary\n",
     "\n",
@@ -1160,11 +1207,10 @@
   }
  ],
  "metadata": {
-  "instance_type": "ml.t3.medium",
   "kernelspec": {
-   "display_name": "Python 3 (Data Science)",
+   "display_name": "conda_tensorflow_p36",
    "language": "python",
-   "name": "python3__SAGEMAKER_INTERNAL__arn:aws:sagemaker:us-east-1:081325390199:image/datascience-1.0"
+   "name": "conda_tensorflow_p36"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1176,7 +1222,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.6.10"
   }
  },
  "nbformat": 4,
