--- a/Starter-Code/Apply clustering techniques.ipynb
+++ b/Starter-Code/Apply clustering techniques.ipynb
@@ -447,9 +447,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<font color='red'>Task: Plot centroids.\n",
-    "    \n",
-    "Note that centroids are Z-normalized and their range does not match with original stock range. Add code in following cell to create a line chart containing  centroids.</font> "
+    "Note that centroids are Z-normalized and their range does not match with original stock range. Add code in following cell to create a line chart containing  centroids."
    ]
   },
   {
@@ -457,7 +455,19 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "figure(num=None, figsize=(14, 6), dpi=150, facecolor='w', edgecolor='k')\n",
+    "\n",
+    "#Display only month and day\n",
+    "formatter = mdates.DateFormatter(\"%m-%d\")\n",
+    "ax = plt.gca()\n",
+    "ax.xaxis.set_major_formatter(formatter)\n",
+    "\n",
+    "\n",
+    "for index,centroid in enumerate(centroids):\n",
+    "    plt.plot( dates, centroid, linewidth=1, label='Centroid '+str(index))\n",
+    "plt.legend()\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -513,7 +523,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "predictor.delete_endpoint()"
+   ]
   },
   {
    "cell_type": "markdown",
