--- a/Starter-Code/Apply clustering techniques.ipynb
+++ b/Starter-Code/Apply clustering techniques.ipynb
@@ -524,7 +524,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "predictor.delete_endpoint()"
+    "#predictor.delete_endpoint()"
    ]
   },
   {
