Add istalling unzip

--- a/Starter-Code/Recommendation-System-FM-KNN.ipynb
+++ b/Starter-Code/Recommendation-System-FM-KNN.ipynb
@@ -100,6 +100,7 @@
    ],
    "source": [
     "#download data\n",
+    "!conda install -y -c conda-forge unzip\n"
     "!wget http://files.grouplens.org/datasets/movielens/ml-100k.zip\n",
     "!unzip -o ml-100k.zip"
    ]
