Correct precision and recall formulas
The formulas for calculating precision and recall are reversed.  The correct formulas are:

Precision = TP / (TP+FP)
Recall = TP / (TP+FN)

--- a/Starter-Code/Multiprocess Ensembler.ipynb
+++ b/Starter-Code/Multiprocess Ensembler.ipynb
@@ -798,9 +798,9 @@
     "    # lower left corner\n",
     "    fns = mx.iloc[1, 0]\n",
     "    \n",
-    "    precision = np.round(tps / (tps + fns), 4) * 100\n",
+    "    recall = np.round(tps / (tps + fns), 4) * 100\n",
     "    \n",
-    "    recall = np.round(tps / (tps + fps), 4) * 100\n",
+    "    precision = np.round(tps / (tps + fps), 4) * 100\n",
     "    \n",
     "    print ('Precision = {}%, Recall = {}%'.format(precision, recall))\n",
     "    \n",
